<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="noArchives"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface_primary"
        android:orientation="vertical"
        tools:context=".ui.fragments.EditNoteFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            app:popupTheme="@style/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_ios_24"
            app:navigationIconTint="@color/text_secondary" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/archive"
                android:layout_gravity="center"
                android:textColor="@color/text_on_surface"
                android:textSize="@dimen/text_lg"/>
        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_note" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/empty_box_icon"
            android:layout_height="@dimen/empty_box_icon"
            android:alpha="@dimen/empty_box_icon_alpha"
            android:contentDescription="@string/no_notes"
            android:src="@drawable/ic_empty"
            android:visibility="gone"
            app:isVisible="@{noArchives}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.39999998"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_no_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md"
            android:text="@string/no_archives"
            tools:visibility="visible"
            android:textSize="@dimen/text_lg"
            app:isVisible="@{noArchives}"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>